# nerf-gs-playground

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
apps/dreamwalker-web/: README.md  index.html  overlay.html  package-lock.json  package.json  playwright.config.js  vite.config.js
apps/dreamwalker-web/src/: App.jsx  DreamwalkerScene.jsx  OverlayApp.jsx  Sim2RealPanel.jsx  WalkRuntime.jsx  app-config.js  overlay-main.jsx  overlay-shared.js  overlay-ui.jsx  overlay.css  robot-route-analysis.js  robotics-bridge.js  semantic-zones.js  sim2real-live-localization-import.js  sim2real-localization-core.js  sim2real-localization.js  sim2real-query.js  sim2real-review-bundle-import.js  sim2real-websocket-protocol.js  studio-health.js  styles.css
apps/dreamwalker-web/tests/: docs-viewer.test.mjs  live-localization-stream-import.test.mjs  localization-review-bundle-import.test.mjs  sim2real-websocket-protocol.test.mjs  smoke.spec.js
apps/dreamwalker-web/tools/: analyze-robot-route.mjs  bundle-robot-mission.mjs  discover-robot-bundles.mjs  live-localization-stream-import-lab.mjs  localization-review-bundle-import-lab.mjs  overlay-relay.mjs  publish-robot-mission.mjs  release-robot-mission.mjs  robot-bundle-discovery.mjs  robotics-bridge-client.mjs  robotics-bridge.mjs  robotics-rosbridge-relay.mjs  sim2real-websocket-protocol-lab.mjs  stage-marble-fragment.mjs  stage-robot-route.mjs  stage-robot-zones.mjs  suggest-robot-zones.mjs  tune-robot-zones.mjs  validate-robot-bundle.mjs  validate-studio-assets.mjs
configs/: datasets.yaml  training.yaml  training_appearance.yaml  training_depth.yaml  training_depth_long.yaml
configs/robotics/: dreamwalker_zones.sample.json
docs/: decisions.md  experiments.generated.md  experiments.md  index.html  interfaces.md  launch-kit.html  launch-kit.json  launch-kit.md  physical-ai-sim.md  plan_outdoor_gs.md  scene-picker.js  scenes-list.json  scenes.json  sim-scenes.json  splat.html  splat_spark.html  splat_webgpu.html  training_metrics.json
docs/assets/: scenes.json
docs/assets/demo-room/: scene.json
docs/assets/outdoor-demo/: outdoor-demo.splat  scene.json
docs/fixtures/dynamic-obstacles/: mixed-reactive.json
docs/prototypes/: dreamwalker-handoff-plan.md  dreamwalker-live.md  dreamwalker-robotics.md  dreamwalker.md
docs/releases/: v0.1.0.md
docs/reviews/: index.html  index.json
docs/reviews/smoke-route-policy-ci/: index.html  review.json  review.md
docs/splat-viewer/: main.js
docs/splat-webgpu/: index.html
docs/splat-webgpu/assets/: index.css  index.js
docs/unity/: dreamwalker-setup.md  monorepo-structure.md
notebooks/: quickstart.ipynb
projects/DreamWalker/: README.md
projects/DreamWalker/ProjectSettings/: ProjectSettings.asset
scripts/: build_pages_reviews_index.py  build_pages_sample_review_bundle.py  capture_readme_splat_previews.py  check_mcd_gnss.py  check_waymo_e2e_prereqs.sh  collect_mcd_quality_runs.py  demo.sh  download_datasets.py  download_mcd_calibration.sh  download_mcd_session.sh  enhance_demo_sweep_previews.py  generate_demo_gif.py  generate_demo_images.py  generate_gallery.py  generate_launch_kit.py  generate_sim_catalog.py  merge_mcd_sparse.py  pages_scene_manifest.py  record_demo_gif.py  robotics_smoke.py  run_demo.py  run_dust3r.py  run_rosbag_correlation.py  smoke_route_policy_scenario_ci.py
src/gs_sim2real/: __init__.py  benchmark.py  cli.py
src/gs_sim2real/common/: config.py  (+1 more)
src/nerf_gs_playground/: __init__.py  cli.py
tests/: test_benchmark.py  test_bundled_mixed_reactive_fixture.py  test_check_mcd_gnss_script.py  test_cli.py  test_colmap_ready.py  test_config.py  test_download.py  test_experiment_process_docs.py  test_external_slam.py  test_external_slam_import_plan.py  test_external_slam_profiles.py  test_gsplat_render_server.py  test_gsplat_trainer.py  test_launch_kit.py  test_lidar_slam.py  test_live_localization_stream_import_lab.py  test_localization_alignment_lab.py  test_localization_estimate_import_lab.py  test_localization_image_benchmark.py  test_localization_review_bundle_import_lab.py  test_mcd.py  test_mcd_quality_plan.py  test_merge_mcd_sparse_script.py  test_nmea_rollover.py  test_pages_assets.py  test_pages_reviews_index.py  test_physical_ai_footprint.py  test_physical_ai_gym_adapter.py  test_physical_ai_headless_env.py  test_physical_ai_occupancy.py  test_physical_ai_policy_benchmark.py  test_physical_ai_policy_dataset.py  test_physical_ai_policy_imitation.py  test_physical_ai_policy_replay.py  test_physical_ai_sim.py  test_physical_ai_splat_renderer.py  test_policy_dynamic_obstacles.py  test_policy_obstacle.py  test_policy_sensor_noise.py  test_pose_free.py  (+25 more)
tools/unity/: bootstrap_dreamwalker.sh  find_unity.sh  open_dreamwalker.sh
(+152 files in other folders)
