[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nerf-gs-playground"
version = "0.1.0"
description = "Multi-dataset 3D Gaussian Splatting reconstruction playground"
authors = [{ name = "rsasaki0109" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["3d-gaussian-splatting", "nerf", "3d-reconstruction", "point-cloud", "robotics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "opencv-python",
    "Pillow",
    "matplotlib",
    "tqdm",
    "pyyaml",
    "huggingface-hub",
    "gdown",
    "viser",
]

[project.urls]
Homepage = "https://github.com/rsasaki0109/nerf-gs-playground"
Documentation = "https://rsasaki0109.github.io/nerf-gs-playground/"
Repository = "https://github.com/rsasaki0109/nerf-gs-playground"

[project.optional-dependencies]
nerfstudio = ["nerfstudio"]
gsplat = ["gsplat"]
app = ["streamlit>=1.30", "plotly>=5.0"]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
gs-playground = "nerf_gs_playground.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
